MNGW-5626: Fix functionality, alignment

--- a/app/styles/pages/_accountManagement.scss
+++ b/app/styles/pages/_accountManagement.scss
@@ -63,3 +63,7 @@
   overflow-y: scroll;
   width: inherit;
 }
+
+.is-not-active{
+  color: #BBBBBB;
+}
